# clean_architecture_example

./: .gitignore  README.md  pyproject.toml
spells/: client.py  data_registry.py  entities.py  use_case.py
