[tool.poetry]
name = "clean_architecture_example"
version = "0.1.0"
description = ""
authors = ["JPFrancoia <jeanpatrick.francoia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
tinydb = "^4.7.1"

[tool.poetry.dev-dependencies]
black = "*"
ipdb = "*"
ipython = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
